# MFMHistServer_jw

./: .gitignore  CMakeLists.txt  MFMHistServer  config.json  config_bad.json  config_good.json  config_stark.json  list_ref_files  main.cpp  test.cpp
include/: HistServer.h
source/: Analysis.C  CMakeLists.txt  Example.cpp  HistServer.cpp  HistServer.h
src/: HistServer.cpp
